@@ -18,7 +18,7 @@
  *   You should have received a copy of the GNU General Public License
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- *   $Id: s_conf.h,v 1.52 2001/07/18 01:37:06 lusky Exp $
+ *   $Id: s_conf.h,v 1.53 2001/08/05 17:04:18 leeh Exp $
  */
 
 #ifndef INCLUDED_config_h
@@ -125,10 +125,6 @@ typedef struct QlineItem {
 #define CONF_FLAGS_ZIP_LINK             0x0800
 #define CONF_FLAGS_SPOOF_IP             0x1000
 
-#ifdef LITTLE_I_LINES
-#define CONF_FLAGS_LITTLE_I_LINE        0x8000
-#endif
-
 
 /* Macros for aConfItem */
 
@@ -148,9 +144,6 @@ typedef struct QlineItem {
 
 #define IsConfDoIdentd(x)       ((x)->flags & CONF_FLAGS_DO_IDENTD)
 #define IsConfDoSpoofIp(x)      ((x)->flags & CONF_FLAGS_SPOOF_IP)
-#ifdef LITTLE_I_LINES
-#define IsConfLittleI(x)        ((x)->flags & CONF_FLAGS_LITTLE_I_LINE)
-#endif
 
 /* port definitions for Opers */
 
