@@ -1,1 +1,1 @@
-#define SERIALNUM "20011019_1"
+#define SERIALNUM "20011024_1"
