@@ -22,7 +22,7 @@
  * These flags can be set in a define if you wish.
  *
  *
- * $Id: channel.c,v 1.213 2001/08/10 08:02:28 leeh Exp $
+ * $Id: channel.c,v 1.214 2001/08/10 13:59:14 leeh Exp $
  */
 #include "channel.h"
 #include "m_commands.h"
@@ -1064,25 +1064,6 @@ void set_channel_mode(struct Client *cptr,
                   parv++;
                   break;
                 }
-#ifdef LITTLE_I_LINES
-              else
-                {
-                  if(IsRestricted(sptr) && (whatt == MODE_ADD))
-                    {
-                      if(!errsent(SM_ERR_RESTRICTED, &errors_sent))
-                        {
-                          sendto_one(sptr,
-            ":%s NOTICE %s :*** Notice -- You are restricted and cannot chanop others",
-                                 me.name,
-                                 sptr->name);
-                        }
-                      /* eat the parameter */
-                      parc--;
-                      parv++;
-                      break;
-                    }
-                }
-#endif
             }
           if (whatt == MODE_QUERY)
             break;
