@@ -17,7 +17,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: send.c,v 1.103 2001/07/10 12:40:37 jdc Exp $
+ *   $Id: send.c,v 1.104 2001/10/19 11:53:51 db Exp $
  */
 #include "send.h"
 #include "channel.h"
@@ -1292,20 +1292,24 @@ vsendto_prefix_one(register aClient *to, register aClient *from,
   par = va_arg(args, char *);
   if (MyClient(to) && IsPerson(from) && !irccmp(par, from->name))
     {
-      strcpy(sender, from->name);
-      
-      if (*from->username)
-        {
-          strcat(sender, "!");
-          strcat(sender, from->username);
-        }
+      int l;
+      char *cp;
 
+      l = ircsprintf(from->name);
+      cp = sender + l;
+
+      if (*from->username)
+	{
+	  l = ircsprintf(cp,"!%s",from->username);
+	  cp += l;
+	}
+      
       if (*from->host)
         {
-          strcat(sender, "@");
-          strcat(sender, from->host);
+          l = ircsprintf(cp,"@%s",from->host)
+          cp += l;
         }
-      
+
       par = sender;
     } /* if (user) */
 
